<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="168dp"
        android:layout_marginLeft="169dp"
        android:layout_marginRight="168dp"
        android:layout_marginStart="169dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/surname_tf"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back" />

            <EditText
                android:id="@+id/surname_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_surname"
                android:inputType="text"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/phone_tf"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_tf" />

            <EditText
                android:id="@+id/phone_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_phone"
                android:inputType="phone"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/email_tf"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surname_tf" />

            <EditText
                android:id="@+id/email_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/password_tf"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_tf" />

            <EditText
                android:id="@+id/password_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/rPassword_tf"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_tf" />

            <EditText
                android:id="@+id/rPassword_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_tf" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="registerAccount"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>