<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <ImageView
                android:id="@+id/iv_picture"
                android:layout_width="wrap_content"
                android:layout_height="260dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"/>

            <LinearLayout
                android:id="@+id/ll_text_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_picture"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_dialog_edittext"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_recognizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/type"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@id/ll_text_container"/>

            <EditText
                android:id="@+id/et_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/tv_type"/>

            <TextView
                android:id="@+id/tv_merchant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/merchant"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@id/et_type"/>

            <EditText
                android:id="@+id/et_merchant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/tv_merchant"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/receipt_date"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@id/et_merchant"/>

            <TextView
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="chooseDate"
                android:layout_below="@id/tv_date"/>

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/total"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@id/et_date"/>

            <EditText
                android:id="@+id/et_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="number"
                android:layout_below="@id/tv_total"/>

            <TextView
                android:id="@+id/tv_total_tax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/total_tax"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@id/et_total"/>

            <EditText
                android:id="@+id/et_total_tax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="number"
                android:layout_below="@id/tv_total_tax"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_below="@id/et_total_tax"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"/>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Delete Receipt"
                android:backgroundTint="@color/google"
                android:layout_below="@id/btn_save"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"/>
        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>